@@ -122,31 +122,6 @@
 	mov	a1, a1	@ Avoid StrongARM MSR bug
 	.endm
 
-	@ In the shared library, these values cannot refer to any absolute
-	@ addresses. They are set to zero at compile time and initialised
-	@ at runtime where required.
-	.macro UL_MEMORY_LAYOUT
-	.word	0			@ mutex			offset = 0
-	.word	0			@ appspace_himem	offset = 4
-	.word	0			@ unixlib_stack		offset = 8
-#if PIC
-	.word	0			@ robase		offset = 12
-	.word	0			@ rwlomem		offset = 16
-	.word	0			@ rwbase		offset = 20
-#else
-	.word	Image$$RO$$Base		@ robase		offset = 12
-	.word	Image$$RW$$Limit	@ rwlomem		offset = 16
-	.word	Image$$RW$$Base		@ rwbase		offset = 20
-#endif
-	.word	0			@ rwbreak		offset = 24
-	.word	0			@ unixlib_stack_limit	offset = 28
-	.word	0			@ dalomem		offset = 32
-	.word	0			@ dabreak		offset = 36
-	.word	0			@ dalimit		offset = 40
-	.word	0			@ appspace_limit	offset = 44
-	.word	0			@ old_himem		offset = 48
-	.endm
-
 	@ Macro for declaring the type and size of a function defined in ARM code.
 	@ Place at end of function definition for size to be calculated correctly.
 	.macro	DECLARE_FUNCTION name
